feat: Add instruction toast message

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -23,7 +23,7 @@
   <Button
     android:id="@+id/button_okay"
     style="@style/ActivityDetail.ButtonOkay"
-    android:contentDescription="@string/okay_button" />
+    android:contentDescription="@string/button_okay" />
 
   <include layout="@layout/content_detail" />
 
