feat: Add UI functionality to select downloads
Additional Changes:
* Consolidate receiver and utility functions in DownloadUtils.kt

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,8 @@
   </com.google.android.material.appbar.AppBarLayout>
 
   <!-- Content Main Layout -->
-  <include layout="@layout/content_main" />
+  <include
+    android:id="@+id/content_main"
+    layout="@layout/content_main" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
