--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,7 +32,7 @@
   <!-- Toolbar -->
   <style name="ActivityDetail.Toolbar" parent="ApplicationStyle">
     <item name="android:layout_height">?attr/actionBarSize</item>
-    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_width">match_parent</item>
     <item name="android:background">?attr/colorPrimary</item>
   </style>
   <!-- Okay Button -->
