--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,12 +3,16 @@
   <dimen name="radio_button_margin_bottom">30dp</dimen>
 
   <!-- Detail Screen -->
-  <dimen name="button_okay_margin">16dp</dimen>
+  <dimen name="button_ok_margin">16dp</dimen>
+  <dimen name="button_ok_height">60dp</dimen>
 
   <!-- Default Values -->
   <dimen name="default_padding">16dp</dimen>
   <dimen name="default_text_size">20sp</dimen>
 
   <!-- Loading Button -->
+  <dimen name="button_loading_height">60dp</dimen>
+  <dimen name="button_loading_width">0dp</dimen>
+  <dimen name="button_layout_margin">20dp</dimen>
 
 </resources>
