--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <declare-styleable name="LoadingButton">
-
+    <attr format="color" name="defaultButtonPaint" />
+    <attr format="color" name="loadingButtonPaint" />
+    <attr format="color" name="defaultTextPaint" />
   </declare-styleable>
 </resources>
