--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -23,7 +23,7 @@
   <Button
     android:id="@+id/button_ok"
     style="@style/ActivityDetail.ButtonOkay"
-    android:contentDescription="@string/button_okay" />
+    android:contentDescription="@string/label_button_ok" />
 
   <!-- Content Detail Layout -->
   <include
