--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,18 +1,14 @@
 <resources>
-  <!-- Main Screen -->
-  <dimen name="radio_button_margin_bottom">30dp</dimen>
-
-  <!-- Detail Screen -->
-  <dimen name="button_ok_margin">16dp</dimen>
-  <dimen name="button_ok_height">60dp</dimen>
-
   <!-- Default Values -->
   <dimen name="default_padding">16dp</dimen>
   <dimen name="default_text_size">20sp</dimen>
-
-  <!-- Loading Button -->
-  <dimen name="button_loading_height">60dp</dimen>
-  <dimen name="button_loading_width">0dp</dimen>
-  <dimen name="button_layout_margin">20dp</dimen>
-
+  <!-- Main Screen -->
+  <dimen name="main_radio_button_margin_bottom">30dp</dimen>
+  <dimen name="main_button_loading_height">60dp</dimen>
+  <dimen name="main_button_loading_width">0dp</dimen>
+  <dimen name="main_button_loading_layout_margin">4dp</dimen>
+  <!-- Detail Screen -->
+  <dimen name="detail_button_ok_margin">16dp</dimen>
+  <dimen name="detail_button_ok_height">60dp</dimen>
+  <dimen name="detail_textview_margin_top">50dp</dimen>
 </resources>
