feat: Update detail screen download properties

--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -7,80 +7,82 @@
   tools:context="dev.kelocen.loadstatus.detail.DetailActivity"
   tools:showIn="@layout/activity_detail">
 
-  <!-- File Name Label -->
-  <TextView
-    android:id="@+id/text_file_name_label"
-    style="@style/ActivityDetail.TextView.FileNameLabel"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/text_download_date_label" />
-
-  <!-- File Name -->
-  <TextView
-    android:id="@+id/text_file_name"
-    style="@style/ActivityDetail.TextView"
-    app:layout_constraintStart_toStartOf="@+id/guideline2"
-    app:layout_constraintTop_toBottomOf="@+id/text_download_date"
-    tools:text="file.zip" />
-
-  <!-- File ID Label -->
-  <TextView
-    android:id="@+id/text_file_id_label"
-    style="@style/ActivityDetail.TextView.FileIdLabel"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/text_file_name_label" />
-
-  <!-- File ID -->
-  <TextView
-    android:id="@+id/text_file_id"
-    style="@style/ActivityDetail.TextView"
-    app:layout_constraintStart_toStartOf="@+id/guideline2"
-    app:layout_constraintTop_toBottomOf="@+id/text_file_name"
-    tools:text="1289" />
-
-  <!-- Download Status Label -->
-  <TextView
-    android:id="@+id/text_download_status_label"
-    style="@style/ActivityDetail.TextView.DownloadStatusLabel"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
-
-  <!-- Download Status -->
-  <TextView
-    android:id="@+id/text_download_status"
-    style="@style/ActivityDetail.TextView"
-    app:layout_constraintStart_toStartOf="@+id/guideline2"
-    app:layout_constraintTop_toTopOf="parent"
-    tools:text="Success" />
-
-  <!-- File Size Label -->
-  <TextView
-    android:id="@+id/text_file_size_label"
-    style="@style/ActivityDetail.TextView.FileSizeLabel"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/text_file_id_label" />
-
-  <!-- File Size -->
-  <TextView
-    android:id="@+id/text_file_size"
-    style="@style/ActivityDetail.TextView"
-    app:layout_constraintStart_toStartOf="@+id/guideline2"
-    app:layout_constraintTop_toBottomOf="@+id/text_file_id"
-    tools:text="150kb" />
-
   <!-- Download Date Label -->
   <TextView
     android:id="@+id/text_download_date_label"
     style="@style/ActivityDetail.TextView.DownloadDateLabel"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/text_download_status_label" />
+    app:layout_constraintTop_toTopOf="parent" />
 
   <!-- Download Date -->
   <TextView
     android:id="@+id/text_download_date"
     style="@style/ActivityDetail.TextView"
     app:layout_constraintStart_toStartOf="@+id/guideline2"
-    app:layout_constraintTop_toBottomOf="@+id/text_download_status"
+    app:layout_constraintTop_toTopOf="parent"
     tools:text="08/21/2021" />
+
+  <!-- Download Status Label -->
+  <TextView
+    android:id="@+id/text_download_status_label"
+    style="@style/ActivityDetail.TextView.DownloadStatusLabel"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/text_download_date_label" />
+
+  <!-- Download Status -->
+  <TextView
+    android:id="@+id/text_download_status"
+    style="@style/ActivityDetail.TextView"
+    app:layout_constraintStart_toStartOf="@+id/guideline2"
+    app:layout_constraintTop_toBottomOf="@+id/text_download_date"
+    tools:text="Success" />
+
+  <!-- Download Name Label -->
+  <TextView
+    android:id="@+id/text_download_name_label"
+    style="@style/ActivityDetail.TextView.DownloadNameLabel"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/text_download_status_label" />
+
+  <!-- Download Name -->
+  <TextView
+    android:id="@+id/text_download_name"
+    style="@style/ActivityDetail.TextView"
+    app:layout_constraintStart_toStartOf="@+id/guideline2"
+    app:layout_constraintTop_toBottomOf="@+id/text_download_status"
+    tools:text="file.zip" />
+
+  <!-- Download Size Label -->
+  <TextView
+    android:id="@+id/text_download_size_label"
+    style="@style/ActivityDetail.TextView.DownloadSizeLabel"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/text_download_name_label" />
+
+  <!-- Download Size -->
+  <TextView
+    android:id="@+id/text_download_size"
+    style="@style/ActivityDetail.TextView"
+    app:layout_constraintStart_toStartOf="@+id/guideline2"
+    app:layout_constraintTop_toBottomOf="@+id/text_download_name"
+    tools:text="150kb" />
+
+  <!-- Download URL Label -->
+  <TextView
+    android:id="@+id/text_download_url_label"
+    style="@style/ActivityDetail.TextView.DownloadUrlLabel"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/text_download_size_label" />
+
+  <!-- Download URL -->
+  <TextView
+    android:id="@+id/text_download_url"
+    style="@style/ActivityDetail.TextView"
+    app:layout_constrainedWidth="true"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="@id/guideline2"
+    app:layout_constraintTop_toBottomOf="@+id/text_download_size"
+    tools:text="example.com/file.zip" />
 
   <!-- Details Guideline -->
   <androidx.constraintlayout.widget.Guideline
