--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -45,9 +45,11 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/radio_group_item_list"
-    app:paintDefaultButton="@color/colorPrimary"
-    app:paintDefaultText="@color/white"
-    app:paintLoadingButton="@color/colorPrimaryDark"
-    app:paintLoadingCircle="@color/colorAccent" />
+    app:buttonCirclePaint="@color/colorAccent"
+    app:buttonDefaultPaint="@color/colorPrimary"
+    app:buttonDefaultText="@string/main_label_default_button_text"
+    app:buttonLoadingPaint="@color/colorPrimaryDark"
+    app:buttonLoadingText="@string/main_label_loading_button_text"
+    app:buttonTextPaint="@color/white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
