--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,11 +17,40 @@
       app:popupTheme="@style/Theme.LoadStatus.PopupOverlay"
       app:title="@string/app_name" />
 
+    <!-- Logo Frame Layout -->
+    <FrameLayout
+      android:id="@+id/frame_load_status_logo"
+      style="@style/ContentMain.FrameLayout"
+      app:layout_constrainedHeight="true"
+      app:layout_constrainedWidth="true"
+      app:layout_constraintBottom_toTopOf="@id/radio_group_item_list"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_wrapBehaviorInParent="included">
+
+      <!-- Logo -->
+      <ImageView
+        android:id="@+id/image_load_status_logo"
+        style="@style/ContentMain.ImageView"
+        android:contentDescription="@string/main_load_status_logo_description" />
+
+    </FrameLayout>
+
   </com.google.android.material.appbar.AppBarLayout>
 
-  <!-- Content Main Layout -->
-  <include
-    android:id="@+id/content_main"
-    layout="@layout/content_main" />
+  <!-- Content Main ScrollView -->
+  <ScrollView
+    android:id="@+id/scrollView_main_content"
+    style="@style/ActivityMain.ScrollView"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    <!-- Content Main Layout -->
+    <include
+      android:id="@+id/content_main"
+      layout="@layout/content_main"
+      app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+  </ScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
