--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
   <color name="colorAccent">#F9A825</color>
   <color name="white">#FFFFFF</color>
   <color name="black">#000000</color>
+  <color name="purple">#8657D8</color>
 </resources>
